# solar-consulting

./: README.md  build_pdf.py  deploy.sh  main.py  pyproject.toml
app/: main.py
app/static/css/: brand.css  custom.css
app/static/js/: analytics.js
app/templates/: base.html  checklist_pdf.html  danke.html  datenschutz.html  impressum.html  index.html
