[project]
name = "solar-consulting"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
    "weasyprint>=68.1",
]
